# chicken-watcher

./: .dockerignore  .env.example  .gitignore  .output.txt  AGENTS.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
chicken_watcher/: models.py  views.py
chicken_watcher/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
docs/: tech-debt-review.md
eggs/: admin.py  apps.py  views.py
eggs/migrations/: 0001_initial.py  0002_alter_chicken_date_of_death.py  0003_nestingboxvisit.py  0004_alter_egg_laid_at_alter_nestingboxvisit_ended_at.py  0005_alter_egg_laid_at_alter_nestingboxvisit_ended_at.py  0006_nestingboxvisit_started_before_ended.py
hardware-agent/: Dockerfile  README.md  main.py  pyproject.toml
hardware-agent/src/hardware_agent/: main.py
hardware-agent/src/hardware_agent/db/: core.py  init_db.py  repository.py  schema.py  seed_dev.py
hardware-agent/tests/: conftest.py  demo_test.py
hardware-agent/tests/db/: test_repository.py
scheduler/: crontab
src/chicken_watcher/: apps.py
src/chicken_watcher/migrations/: 0001_initial.py
src/django_project/: asgi.py  settings.py  urls.py
src/django_project/settings/: __init__.py  base.py  dev.py  prod.py
src/hardware_agent/: base.py  beam_break_sensor.py  beam_break_test.py  camera.py  create_egg_service.py  handlers.py  manager.py  rfid_reader.py  rfid_scan_group.py  service.py  test_gpio.py
src/web_app/: admin.py  analytics.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
src/web_app/management/commands/: chickens.csv  delete_nesting_box_images.py  ensure_nesting_boxes.py  import_chickens.py  import_tags.py  prune_nesting_box_images.py  run_hardware_agent.py  seed.py  tags.csv
src/web_app/migrations/: 0001_initial.py  0002_nestingboxpresence_and_more.py  0003_alter_nestingboxpresence_present_at.py  0004_alter_nestingboxpresence_options.py  0005_alter_nestingbox_options_and_more.py  0006_alter_nestingbox_options.py  0007_nestingboximage.py  0008_alter_egg_chicken.py  0009_alter_egg_chicken_alter_egg_nesting_box.py  0010_hardwaresensor.py  0011_nestingboxpresenceperiod_and_more.py  0012_alter_egg_laid_at_and_more.py  0013_reindex_presence_period_presence.py  0014_alter_nestingboximage_created_at.py  0015_add_tag_model_and_refactor_chicken.py  0016_change_chicken_tag_to_foreignkey.py  0017_add_dud_to_egg.py  0018_nestingboxpresence_sensor_id_and_more.py  0019_remove_nestingboxpresenceperiod_sensor_id.py  0020_egg_quality.py  0021_egg_fk_set_null.py  0022_presence_period_time_ordering.py  0023_presence_period_time_ordering.py  0023_unique_tag_per_live_chicken.py  0024_add_default_orderings.py  0024_unique_tag_per_live_chicken.py  0025_degraded_sensor_status.py
src/web_app/services/: __init__.py  hardware_events.py
src/web_app/static/web_app/css/: chicken_detail.css  timeline.css  timeline_page.css
src/web_app/static/web_app/js/: chicken_detail.js  dashboard_image.js  metrics_charts.js  metrics_form.js  timeline_page.js  timeline_utils.js
src/web_app/templates/: base.html
src/web_app/templates/admin/: base_site.html
src/web_app/templates/web_app/: base.html  chicken_detail.html  chicken_list.html  dashboard.html  egg_confirm_delete.html  egg_form.html  egg_list.html  egg_production.html  metrics.html  timeline.html
src/web_app/templates/web_app/partials/: _bs_field.html  _eggs_today.html  _latest_image.html  (+8 more)
src/web_app/templatetags/: chicken_extras.py  list_tables.py
src/web_app/views/: __init__.py  chickens.py  dashboard.py  eggs.py  metrics.py  metrics_chart_builders.py  timeline.py  timeline_utils.py
test/: test_logging.py  test_settings.py
test/hardware_agent/: test_base_sensor.py  test_beam_sensor.py  test_camera.py  test_handlers.py  test_manager.py  test_rfid_reader.py  test_rfid_scan_group.py  test_service.py
test/web_app/: factories.py  test_analytics.py  test_commands.py  test_e2e.py  test_forms.py  test_models.py  test_querysets.py  test_templates.py  test_templatetags.py  test_timezone.py  test_utils.py  test_views.py
test/web_app/management/commands/: test_delete_nesting_box_images.py  test_prune_nesting_box_images.py  test_seed.py
test/web_app/services/: test_hardware_events.py
test/web_app/templatetags/: test_list_tables.py
test/web_app/views/: test_chickens.py  test_dashboard.py  test_eggs.py  test_metrics.py  test_timeline.py  test_timeline_utils.py
test/web_app/views/metrics/: conftest.py  test_age_prod.py  test_aggregates.py  test_defaults.py  test_flock_count.py  test_nesting_box.py  test_params.py  test_quality.py  test_query_count.py  test_unknown_chicken.py
