[project]
name = "watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "dotenv>=0.9.9",
    "gpiozero>=2.0.1",
    # Only install rpi-lgpio on the Raspberry Pi
    "rpi-lgpio; platform_system == 'Linux' and (platform_machine == 'armv7l' or platform_machine == 'aarch64')",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pyserial>=3.5",
    "uvicorn>=0.40.0",
]

[project.scripts]
list-ports = "hardware_agent.rfid_reader:RFIDReader.list_ports"
list-cameras = "hardware_agent.camera:USBCamera.list_devices"
test-pin = "hardware_agent.beam_break_sensor:BeamBreakSensor.test"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "ruff>=0.14.10",
]
