[project]
name = "watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "dotenv>=0.9.9",
    "gpiozero>=2.0.1",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pyserial>=3.5",
    "uvicorn>=0.40.0",
    "swig>=4.4.1",
    # Only install lgpio on the Raspberry Pi
    "lgpio>=0.2.2.0; platform_system == 'Linux' and (platform_machine == 'armv7l' or platform_machine == 'aarch64')",
]

[project.scripts]
list-ports = "hardware_agent.rfid_reader:RFIDReader.list_ports"
list-cameras = "hardware_agent.camera:USBCamera.list_devices"
test-pin = "hardware_agent.beam_break_sensor:BeamBreakSensor.test"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "factory-boy>=3.3.3",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_project.settings.dev"
pythonpath = ["src", "."]
testpaths = ["test"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
