[project]
name = "hardware-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.45",
]

[project.scripts]
hardware-agent = "hardware_agent.main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
